// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BookmarkSummary with Markdown content 1`] = `
<a
  className="sc-iwsKbI kIdqmU"
  href="https://facebook.github.io/react"
>
  <img
    className="sc-jTzLTM gzteyq"
    src="https://facebook.github.io/react/img/logo_og.png"
  />
  <div
    className="sc-gZMcBi crAViM"
  >
    <h2
      className="sc-gqjmRU ivatZR"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-VigVT iiWudf"
    >
      An Example Website
    </span>
    <div
      className="sc-fjdhpX kRhPox"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Bookmark descriptions can be provided as <strong>Markdown</strong>, and the component should <em>properly</em> format them.</p>
        <p>This includes paragraph breaks</p>
        <ul>
        <li>Lists</li>
        <li>of</li>
        <li>Items</li>
        </ul>
        <p>and</p>
        <ol>
        <li>Numbered</li>
        <li>Lists</li>
        </ol>
        <p>and <a href=\\"/\\">Links</a></p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary with image 1`] = `
<a
  className="sc-iwsKbI kIdqmU"
  href="https://facebook.github.io/react"
>
  <img
    className="sc-jTzLTM gzteyq"
    src="https://facebook.github.io/react/img/logo_og.png"
  />
  <div
    className="sc-gZMcBi crAViM"
  >
    <h2
      className="sc-gqjmRU ivatZR"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-VigVT iiWudf"
    >
      An Example Website
    </span>
    <div
      className="sc-fjdhpX kRhPox"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is an example of what a bookmrk with an image might look like</p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary with just a title 1`] = `
<a
  className="sc-iwsKbI kIdqmU"
  href="https://facebook.github.io/react"
>
  <div
    className="sc-gZMcBi crAViM"
  >
    <h2
      className="sc-gqjmRU ivatZR"
    >
      An Example Bookmark
    </h2>
  </div>
</a>
`;

exports[`Storyshots BookmarkSummary without image 1`] = `
<a
  className="sc-iwsKbI kIdqmU"
  href="https://facebook.github.io/react"
>
  <div
    className="sc-gZMcBi crAViM"
  >
    <h2
      className="sc-gqjmRU ivatZR"
    >
      An Example Bookmark
    </h2>
    <span
      className="sc-VigVT iiWudf"
    >
      An Example Website
    </span>
    <div
      className="sc-fjdhpX kRhPox"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is an example of what a bookmrk without an image might look like</p>
        ",
        }
      }
    />
  </div>
</a>
`;

exports[`Storyshots Button with the block style 1`] = `
<button
  className="sc-bxivhb gIegWz"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Button with the default style 1`] = `
<button
  className="sc-bxivhb iypFXW"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Button with the primary style 1`] = `
<button
  className="sc-bxivhb gnGqQJ"
  onClick={[Function]}
>
  Button
</button>
`;

exports[`Storyshots Form with the default appearance 1`] = `
<form
  className="sc-bZQynM eyjNyA"
  onSubmit={[Function]}
>
  <label
    className="sc-htoDjs fIdUGm"
    htmlFor="one"
  >
    Text Field
  </label>
  <input
    className="sc-dnqmqq jxroDZ"
    id="ome"
    onChange={[Function]}
    placeholder="Placeholder"
    type="text"
  />
  <label
    className="sc-htoDjs fIdUGm"
    htmlFor="twp"
  >
    Text Field
  </label>
  <input
    className="sc-dnqmqq jxroDZ"
    id="twp"
    onChange={[Function]}
    placeholder="Placeholder"
    type="text"
  />
  <label
    className="sc-htoDjs fIdUGm"
    htmlFor="three"
  >
    Text Field
  </label>
  <input
    className="sc-dnqmqq jxroDZ"
    id="three"
    onChange={[Function]}
    placeholder="Placeholder"
    type="text"
  />
  <div
    className="sc-gzVnrw hkrjhh"
  >
    <button
      className="sc-bxivhb iypFXW"
    >
      Cancel
    </button>
    <input
      className="sc-EHOje hzHnHp"
      type="submit"
      value="Submit"
    />
  </div>
</form>
`;

exports[`Storyshots Header with a child component 1`] = `
<div>
  <header
    className="sc-bdVaJa dUaFNN"
  >
    <a
      className="sc-bwzfXH jYxuAL"
      href="/"
      onClick={[Function]}
    >
      <span
        className="sc-htpNat jLuPGr"
      >
        <span
          aria-label="logo"
          role="img"
        >
          📥
        </span>
      </span>
       
      Shoebox
    </a>
    <button
      className="sc-bxivhb iypFXW"
      to="/add"
    >
      Add Bookmark
    </button>
  </header>
</div>
`;

exports[`Storyshots Header with default content 1`] = `
<div>
  <header
    className="sc-bdVaJa dUaFNN"
  >
    <a
      className="sc-bwzfXH jYxuAL"
      href="/"
      onClick={[Function]}
    >
      <span
        className="sc-htpNat jLuPGr"
      >
        <span
          aria-label="logo"
          role="img"
        >
          📥
        </span>
      </span>
       
      Shoebox
    </a>
  </header>
</div>
`;

exports[`Storyshots LinkButton with the block style 1`] = `
<div>
  <a
    block={true}
    className="sc-ifAKCX ESEFj"
    href="#"
    onClick={[Function]}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots LinkButton with the default style 1`] = `
<div>
  <a
    className="sc-ifAKCX fKfUFj"
    href="#"
    onClick={[Function]}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots LinkButton with the primary style 1`] = `
<div>
  <a
    className="sc-ifAKCX icFhT"
    href="#"
    onClick={[Function]}
    primary={true}
  >
    LinkButton
  </a>
</div>
`;

exports[`Storyshots TextField with placeholder 1`] = `
<input
  className="sc-dnqmqq jxroDZ"
  onChange={[Function]}
  placeholder="A placeholder"
  type="text"
/>
`;

exports[`Storyshots TextField with the block style 1`] = `
<input
  className="sc-dnqmqq fYvOud"
  onChange={[Function]}
  type="text"
/>
`;

exports[`Storyshots TextField with the default style 1`] = `
<input
  className="sc-dnqmqq jxroDZ"
  onChange={[Function]}
  type="text"
/>
`;

exports[`Storyshots TextField with value 1`] = `
<input
  className="sc-dnqmqq jxroDZ"
  onChange={[Function]}
  type="text"
  value="A value"
/>
`;
